    "btrfs snapshot --preserve".
  * Enhance internal data structures:
    - Allow snapshot_dir to be a mountpoint.
    - Search complete target tree for correlated subvolumes.
    - Include snapshots from all mountpoints as candidates (disabled
      due to uptream bug: github.com/kdave/btrfs-progs/issues/96).
    - Always read /proc/self/mounts.
    - Resolve realpath using readlink(1).

btrbk-0.26.1

  * Add "archive_exclude" configuration option.
  * Add warning on redefined configuration option.
  * Bugfix: fix parsing of "openssl_iv_size" configuration option.
  * Bugfix: fix filter statement matching for volume=/ (close #209).

btrbk-0.26.0

  * MIGRATION
    - If you are using raw targets, make sure to run the
      "raw_suffix2sidecar" utility in each target directory.
  * Support for btrfs-progs v4.13.2: adapt parsing of "btrfs sub list"
    output (close #192).
  * Add "resume" command, replacement for "-r, --resume-only" command
    line option (which is now deprecated).
  * Add "snapshot" command (close #150).
  * Add "prune" command.
  * Add "--preserve-snapshots" and "--preserve-backups" options.
  * Add "--wipe" command line option (close #173).
  * Change raw backup format (sidecar file instead of uuid in file).
  * Honor target_preserve for raw targets (delete raw targets).
  * Add symmetric encryption for raw targets (close #157).
  * Add "{snapshot,target,archive}_qgroup_destroy" configuration
    options (close #49, #189).
  * Do not run in "perl taint mode" by default: remove "perl -T" in
    hashbang; hardcode $PATH only if taint mode is enabled.
  * Remove "duration" column from transaction_log/transaction_syslog.
  * Resolve ancestors (recursive on parent_uuid chain) when searching
    for latest common subvolume.
  * Generate man pages from asciidoc (remove raw groff sources).
  * Bugfix: ssh_filter_btrbk: accept mbuffer command (stream_buffer).
  * Bugfix: print correct (end-)time in transaction_log.